--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "mfe",
   "version": "2.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./build/index.js",
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "build:npm": "babel src --out-dir build",
+    "build": "webpack --config webpack.prod.js && npm run build:npm"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.15.4",
     "@babel/core": "^7.15.0",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
