--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mfe",
   "version": "2.0.0",
   "description": "",
-  "main": "./build/index.js",
+  "main": "./build/bootstrap.js",
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
     "build:npm": "babel src --out-dir build",
